--- a/notebooks/Theoretical_LVR.ipynb
+++ b/notebooks/Theoretical_LVR.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,8 +373,7 @@
     "    name = pool_contract.functions.name().call()\n",
     "    token0 = pool_contract.functions.token0().call()\n",
     "    token1 = pool_contract.functions.token1().call()\n",
-    "    amount0 = underlying_balances[0] / 10 ** 18\n",
-    "    amount1 = underlying_balances[1] / 10 ** 18\n",
+    "\n",
     "\n",
     "    # Get Decimals\n",
     "\n",
@@ -384,6 +383,11 @@
     "    token1_contract = w3.eth.contract(address=token1, abi=erc20_abi)\n",
     "    token0_decimals = token0_contract.functions.decimals().call()\n",
     "    token1_decimals = token1_contract.functions.decimals().call()\n",
+    "    token0_name = token0_contract.functions.name().call()\n",
+    "    token1_name = token1_contract.functions.name().call()\n",
+    "\n",
+    "    amount0 = underlying_balances[0] / 10 ** token0_decimals\n",
+    "    amount1 = underlying_balances[1] / 10 ** token1_decimals\n",
     "\n",
     "    # Get Pool in Uniswap V3\n",
     "    pool = pool_contract.functions.pool().call()\n",
@@ -403,54 +407,61 @@
     "\n",
     "    # Print the results\n",
     "    print(f\"Pool Name: {name}\")\n",
+    "    print(f\"Token0 Name: {token0_name}\")\n",
+    "    print(f\"Token1 Name: {token1_name}\")\n",
+    "    print(f\"Amount0: {amount0}\")\n",
+    "    print(f\"Amount1: {amount1}\")\n",
     "    print(f\"Upper Price: {upper_price}\")\n",
     "    print(f\"Lower Price: {lower_price}\")\n",
     "    print(f\"Current Price: {current_price}\")\n",
     "    print(f\"Uniswap V3 Pool Address: {pool}\")\n",
     "    print(f\"Pool Value: {pool_value} ETH\")\n",
     "\n",
-    "    return lower_price, upper_price, current_price, pool_value,name"
+    "    return lower_price, upper_price, current_price, pool_value,name, token0_name, token1_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The daily realized volatility of ETHUSDC over the past 30 days is: 5.33%\n",
-      "Upper Tick: 204130\n",
-      "Lower Tick: 199730\n",
-      "Current Tick: 201064\n",
-      "Pool Name: Range Uniswap WETH/USDC 0.05% LP\n",
-      "Upper Price: 0.0007325040428108625\n",
-      "Lower Price: 0.00047176966028736014\n",
-      "Current Price: 0.0005390908928407785\n",
-      "Uniswap V3 Pool Address: 0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640\n",
-      "Pool Value: 20.83691552612939 ETH\n",
-      "Daily Loss Ratio for Range Vault Range Uniswap WETH/USDC 0.05% LP is: 6.44981879015338%\n",
-      "Daily Loss for Range Vault Range Uniswap WETH/USDC 0.05% LP is: 0.013439432928926801 ETH\n"
+      "The daily realized volatility of LQTYETH over the past 30 days is: 1.90%\n",
+      "Upper Tick: -74220\n",
+      "Lower Tick: -78960\n",
+      "Current Tick: -76507\n",
+      "Pool Name: Range Uniswap WETH/LQTY 0.30% LP\n",
+      "Token0 Name: LQTY\n",
+      "Token1 Name: Wrapped Ether\n",
+      "Amount0: 2183.105101985537\n",
+      "Amount1: 1.5667530962053215\n",
+      "Upper Price: 0.0005981739711083048\n",
+      "Lower Price: 0.00037237645994137774\n",
+      "Current Price: 0.00047589301352406177\n",
+      "Uniswap V3 Pool Address: 0xD1D5A4c0eA98971894772Dcd6D2f1dc71083C44E\n",
+      "Pool Value: 2.605677562028973 ETH\n",
+      "Daily Loss Ratio for Range Vault Range Uniswap WETH/LQTY 0.30% LP is: 2.124751809639094%\n",
+      "Daily Loss for Range Vault Range Uniswap WETH/LQTY 0.30% LP is: 0.0005536418115257043 Wrapped Ether\n"
      ]
     }
    ],
    "source": [
-    "# sigma_squared = calculate_realized_volatility2('LQTY','ETH',30)\n",
-    "sigma_squared = calculate_realized_volatility('ETHUSDC',30)\n",
+    "sigma_squared = calculate_realized_volatility2('LQTY','ETH',30)\n",
+    "# sigma_squared = calculate_realized_volatility('ETHUSDC',30)\n",
     "\n",
-    "range_pool = \"0x9Ad8d0df2dA118DcE898b7F5BD9Ab749c593A5d9\"\n",
-    "Pa,Pb,P,pool_value,name = get_range_position_details(range_pool)\n",
+    "range_pool = \"0x350D81A7733Ee6b001966e0844A0ebb096FAbF0f\"\n",
+    "# range_pool = \"0x9Ad8d0df2dA118DcE898b7F5BD9Ab749c593A5d9\"\n",
+    "Pa, Pb, P, pool_value, name, token0_name, token1_name = get_range_position_details(range_pool)\n",
     "\n",
     "loss_ratio = calculate_ratio(sigma_squared, P, Pb, Pa)\n",
     "print(f\"Daily Loss Ratio for Range Vault {name} is: {loss_ratio}%\")\n",
     "\n",
     "loss = loss_ratio / 10000 * pool_value\n",
     "\n",
-    "print(f\"Daily Loss for Range Vault {name} is: {loss} ETH\")\n",
-    "\n",
-    "# get price of ETH from binance"
+    "print(f\"Daily Loss for Range Vault {name} is: {loss} {token1_name}\")"
    ]
   }
  ],
