--- a/notebooks/Theoretical_LVR.ipynb
+++ b/notebooks/Theoretical_LVR.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,29 +567,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = get_timestamp(17285193)\n",
-    "end = get_current_timestamp()\n",
-    "df = fetch_pair(\"LQTYUSDT\", \"ETHUSDT\", \"1d\", start, end)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "volatility_df = calculate_volatility(df)\n",
     "volatility_df.reset_index(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "range_pool = \"0x350D81A7733Ee6b001966e0844A0ebb096FAbF0f\"\n",
-    "range_position,token0,token1 = get_range_position_details(range_pool, start, end)\n"
+    "range_position,token0,token1 = get_range_position_details(range_pool, start, end)"
    ]
   },
   {
@@ -602,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
