--- a/notebooks/LVR_Comparison_USDCETH.ipynb
+++ b/notebooks/LVR_Comparison_USDCETH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,17 @@
     "\n",
     "range = pd.read_csv('USDCETH/LVR/Range_USDCETH_LVR_17285193_17673993.csv')\n",
     "# in range df if upper_price and lower_price are same, set both to NA\n",
-    "range.loc[range['upper_price'] == range['lower_price'], ['upper_price', 'lower_price']] = np.nan"
+    "range.loc[range['upper_price'] == range['lower_price'], ['upper_price', 'lower_price']] = np.nan\n",
+    "\n",
+    "range['daily_LVR_ratio_full'] = (range['log_return'] ** 2) / 8\n",
+    "range['daily_LVR_full_USD'] = range['daily_LVR_ratio_full'] * range['pool_value'] * range['token1_usd'] / 10000\n",
+    "range['cumulative_LVR_ratio_full'] = range['daily_LVR_ratio_full'].cumsum()\n",
+    "range['cumulative_LVR_full_USD'] = range['daily_LVR_full_USD'].cumsum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1335,7 @@
           "width": 3
          },
          "mode": "lines",
-         "name": "cumulative_LVR",
+         "name": "Range USDC/ETH Active Strategy",
          "type": "scatter",
          "x": [
           "2023-05-18T00:00:00",
@@ -1446,6 +1451,130 @@
           178.01610668410254,
           178.95646266328455,
           180.63548498724685,
+          null
+         ]
+        },
+        {
+         "line": {
+          "color": "purple"
+         },
+         "mode": "lines",
+         "name": "Full Range / V2 Reference Position",
+         "type": "scatter",
+         "x": [
+          "2023-05-18T00:00:00",
+          "2023-05-19T00:00:00",
+          "2023-05-20T00:00:00",
+          "2023-05-21T00:00:00",
+          "2023-05-22T00:00:00",
+          "2023-05-23T00:00:00",
+          "2023-05-24T00:00:00",
+          "2023-05-25T00:00:00",
+          "2023-05-26T00:00:00",
+          "2023-05-27T00:00:00",
+          "2023-05-28T00:00:00",
+          "2023-05-29T00:00:00",
+          "2023-05-30T00:00:00",
+          "2023-05-31T00:00:00",
+          "2023-06-01T00:00:00",
+          "2023-06-02T00:00:00",
+          "2023-06-03T00:00:00",
+          "2023-06-04T00:00:00",
+          "2023-06-05T00:00:00",
+          "2023-06-06T00:00:00",
+          "2023-06-07T00:00:00",
+          "2023-06-08T00:00:00",
+          "2023-06-09T00:00:00",
+          "2023-06-10T00:00:00",
+          "2023-06-12T00:00:00",
+          "2023-06-13T00:00:00",
+          "2023-06-14T00:00:00",
+          "2023-06-15T00:00:00",
+          "2023-06-16T00:00:00",
+          "2023-06-17T00:00:00",
+          "2023-06-18T00:00:00",
+          "2023-06-19T00:00:00",
+          "2023-06-20T00:00:00",
+          "2023-06-21T00:00:00",
+          "2023-06-22T00:00:00",
+          "2023-06-23T00:00:00",
+          "2023-06-24T00:00:00",
+          "2023-06-25T00:00:00",
+          "2023-06-26T00:00:00",
+          "2023-06-27T00:00:00",
+          "2023-06-28T00:00:00",
+          "2023-06-29T00:00:00",
+          "2023-06-30T00:00:00",
+          "2023-07-01T00:00:00",
+          "2023-07-02T00:00:00",
+          "2023-07-03T00:00:00",
+          "2023-07-04T00:00:00",
+          "2023-07-05T00:00:00",
+          "2023-07-06T00:00:00",
+          "2023-07-07T00:00:00",
+          "2023-07-08T00:00:00",
+          "2023-07-09T00:00:00",
+          "2023-07-10T00:00:00",
+          "2023-07-11T00:00:00",
+          "2023-07-12T00:00:00",
+          "2023-07-13T00:00:00"
+         ],
+         "y": [
+          1.1131137405794425,
+          1.2316298128393062,
+          1.3715953239623648,
+          1.4829536919704773,
+          1.6621453657265381,
+          1.834074189677915,
+          2.2831048325450967,
+          2.508191456640925,
+          2.655379633356193,
+          2.743011915070007,
+          3.741697188104881,
+          3.9485891648498015,
+          4.109510536175586,
+          4.223192235482405,
+          4.397234377813379,
+          4.663748669129049,
+          4.7431887842965486,
+          4.881729109519347,
+          6.1768247914309224,
+          7.08146053294003,
+          8.071816757452025,
+          8.259699947305357,
+          8.393992654062227,
+          9.518239117496833,
+          9.650936935858159,
+          9.959293084242596,
+          15.822991725389432,
+          16.197505123340225,
+          16.774782800459246,
+          16.930170944513918,
+          17.13644467273511,
+          17.63823688798155,
+          18.381716942822738,
+          19.208532735574224,
+          20.35623545214974,
+          21.635523806005526,
+          22.038230559955696,
+          22.2702603350185,
+          23.750104161141405,
+          24.811892784473287,
+          25.099563314519948,
+          25.364226374211025,
+          28.754023865136002,
+          28.803159544553676,
+          29.232743227033325,
+          29.38714436127194,
+          29.605362689190894,
+          29.838663889179525,
+          30.585279459496864,
+          30.749709297641868,
+          30.93799974508821,
+          31.05675054613393,
+          31.61197940755005,
+          31.687049480759338,
+          31.926556028114227,
           null
          ]
         },
@@ -2556,7 +2685,7 @@
     "combined_df['date'] = pd.to_datetime(combined_df['date'])\n",
     "\n",
     "# Create cumulative columns\n",
-    "combined_df['cumulative_LVR'] = combined_df['daily_LVR_ratio'].cumsum()\n",
+    "combined_df['cumulative_LVR_ratio'] = combined_df['daily_LVR_ratio'].cumsum()\n",
     "combined_df['cumulative_LVR_250274'] = combined_df['daily_LVR_ratio_250274'].cumsum()\n",
     "combined_df['cumulative_LVR_515539'] = combined_df['daily_LVR_ratio_515539'].cumsum()\n",
     "combined_df['cumulative_LVR_520645'] = combined_df['daily_LVR_ratio_520645'].cumsum()\n",
@@ -2565,8 +2694,10 @@
     "fig = go.Figure()\n",
     "\n",
     "# Add traces for each cumulative LVR\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR'],\n",
-    "                         mode='lines', name='cumulative_LVR', line=dict(color='red', width=3)))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio'],\n",
+    "                         mode='lines', name='Range USDC/ETH Active Strategy', line=dict(color='red', width=3)))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio_full'],\n",
+    "                         mode='lines', name='Full Range / V2 Reference Position', line=dict(color='purple')))\n",
     "# fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_250274'],\n",
     "#                          mode='lines', name='cumulative_LVR_250274', line=dict(color='green')))\n",
     "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_515539'],\n",
@@ -5785,7 +5916,7 @@
     "combined_df['date'] = pd.to_datetime(combined_df['date'])\n",
     "\n",
     "# Create cumulative columns\n",
-    "combined_df['cumulative_LVR'] = combined_df['daily_LVR_ratio'].cumsum()\n",
+    "combined_df['cumulative_LVR_ratio'] = combined_df['daily_LVR_ratio'].cumsum()\n",
     "combined_df['cumulative_LVR_366096'] = combined_df['daily_LVR_ratio_515539'].cumsum()\n",
     "combined_df['cumulative_LVR_453456'] = combined_df['daily_LVR_ratio_520645'].cumsum()\n",
     "\n",
@@ -5793,15 +5924,14 @@
     "fig = sp.make_subplots(rows=3, cols=1, shared_xaxes=True, vertical_spacing=0.1)\n",
     "\n",
     "# Add traces for cumulative LVR\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR'],\n",
-    "                         mode='lines', name='Range LQTY/ETH Active Strategy', line=dict(color='red', width=3)),\n",
-    "              row=1, col=1)\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio'],\n",
+    "                         mode='lines', name='Range USDC/ETH Active Strategy', line=dict(color='red', width=3)))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio_full'],\n",
+    "                         mode='lines', name='Full Range / V2 Reference Position', line=dict(color='purple')))\n",
     "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_515539'],\n",
-    "                         mode='lines', name='V3 Position 0.3% 515539', line=dict(color='green')),\n",
-    "              row=1, col=1)\n",
+    "                         mode='lines', name='cumulative_LVR_515539', line=dict(color='orange')))\n",
     "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_520645'],\n",
-    "                         mode='lines', name='V3 Position 0.3% 520645', line=dict(color='orange')),\n",
-    "              row=1, col=1)\n",
+    "                         mode='lines', name='cumulative_LVR_520645', line=dict(color='blue')))\n",
     "\n",
     "# Add trace for log return on a separate y-axis\n",
     "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['log_return'],\n",
