Add functions to fetch Position and Volatility Data

--- a/notebooks/FLAIR_LVR.ipynb
+++ b/notebooks/FLAIR_LVR.ipynb
@@ -149,8 +149,7 @@
     "\n",
     "# Getting FLAIR data from csv \n",
     "flair = pd.read_csv(\"Range_LQTYETH_FLAIR_453456.csv\")\n",
-    "flair = flair.drop(flair.columns[0], axis=1)\n",
-    "\n"
+    "flair = flair.drop(flair.columns[0], axis=1)"
    ]
   },
   {
