Generate Data for Jul 16

--- a/notebooks/Theoretical_LVR.ipynb
+++ b/notebooks/Theoretical_LVR.ipynb
@@ -789,43 +789,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = get_timestamp(17285193)\n",
-    "end = get_current_timestamp()\n",
-    "df = threaded_fetching('ETHUSDC', '1m', start, end)\n",
-    "df2 = df.copy()\n",
-    "volatility_df = calculate_volatility(df)\n",
-    "volatility_df.reset_index(inplace=True)\n",
+    "def get_volatility(symbol):\n",
+    "    start = get_timestamp(17285193)\n",
+    "    end = get_current_timestamp()\n",
+    "    df = threaded_fetching(symbol, '1m', start, end)\n",
+    "    df2 = df.copy()\n",
+    "    volatility_df = calculate_volatility(df)\n",
+    "    volatility_df.reset_index(inplace=True)\n",
     "\n",
-    "# Save to csv\n",
+    "    return volatility_df\n",
     "\n",
-    "volatility_df.to_csv('ethusdc_volatility.csv', index=False)"
+    "ethusdc_volatility_df = get_volatility('ETHUSDC')\n",
+    "ethusdc_volatility_df.to_csv('ethusdc_volatility.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fetch data for LQTYUSDT and ETHUSDT\n",
-    "df1 = threaded_fetching('LQTYUSDT', '1m', start, end)\n",
-    "df2 = threaded_fetching('ETHUSDT', '1m', start, end)\n",
+    "def get_volatility_routed(AssetA,AssetB,RouteAsset):\n",
+    "    # Fetch data for LQTYUSDT and ETHUSDT\n",
+    "    df1 = threaded_fetching(f'{AssetA}{RouteAsset}', '1m', start, end)\n",
+    "    df2 = threaded_fetching(f'{AssetB}{RouteAsset}', '1m', start, end)\n",
     "\n",
-    "# Merge df1 and df2 on open_time, for open, high, low and close, divide df1 value by df2 value\n",
-    "df1[['open', 'high', 'low', 'close']] = df1[['open', 'high', 'low', 'close']].astype('float64')\n",
-    "df2[['open', 'high', 'low', 'close']] = df2[['open', 'high', 'low', 'close']].astype('float64')\n",
-    "df1[['open', 'high', 'low', 'close']] = df1[['open', 'high', 'low', 'close']] / df2[['open', 'high', 'low', 'close']]\n",
+    "    # Merge df1 and df2 on open_time, for open, high, low and close, divide df1 value by df2 value\n",
+    "    df1[['open', 'high', 'low', 'close']] = df1[['open', 'high', 'low', 'close']].astype('float64')\n",
+    "    df2[['open', 'high', 'low', 'close']] = df2[['open', 'high', 'low', 'close']].astype('float64')\n",
+    "    df1[['open', 'high', 'low', 'close']] = df1[['open', 'high', 'low', 'close']] / df2[['open', 'high', 'low', 'close']]\n",
     "\n",
-    "# Calculate volatility and reset index\n",
-    "volatility_df = calculate_volatility(df1)\n",
-    "volatility_df.reset_index(inplace=True)\n",
+    "    # Calculate volatility and reset index\n",
+    "    volatility_df = calculate_volatility(df1)\n",
+    "    volatility_df.reset_index(inplace=True)\n",
     "\n",
-    "# Save to csv\n",
-    "volatility_df.to_csv('lqtyeth_volatility.csv', index=False)"
+    "    return volatility_df\n",
+    "\n",
+    "lqtyeth_volatility_df = get_volatility_routed('LQTY','ETH','USDT')\n",
+    "lqtyeth_volatility_df.to_csv('lqtyeth_volatility.csv', index=False)"
    ]
   },
   {
@@ -950,41 +955,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TokenId not found for block 17400393TokenId not found for block 17342793\n",
       "TokenId not found for block 17285193\n",
-      "TokenId not found for block 17400393\n",
-      "TokenId not found for block 17342793\n",
-      "TokenId not found for block 17292393TokenId not found for block 17349993\n",
       "\n",
+      "TokenId not found for block 17292393\n",
+      "TokenId not found for block 17349993\n",
       "TokenId not found for block 17407593\n",
-      "TokenId not found for block 17357193TokenId not found for block 17299593\n",
-      "\n",
+      "TokenId not found for block 17357193\n",
+      "TokenId not found for block 17299593\n",
       "TokenId not found for block 17414793\n",
-      "TokenId not found for block 17421993TokenId not found for block 17364393\n",
-      "\n",
+      "TokenId not found for block 17364393\n",
       "TokenId not found for block 17306793\n",
-      "TokenId not found for block 17313993\n",
+      "TokenId not found for block 17421993\n",
       "TokenId not found for block 17371593\n",
-      "TokenId not found for block 17321193TokenId not found for block 17378793\n",
-      "\n",
+      "TokenId not found for block 17313993\n",
+      "TokenId not found for block 17378793\n",
+      "TokenId not found for block 17321193\n",
       "TokenId not found for block 17328393\n",
       "TokenId not found for block 17385993\n",
       "TokenId not found for block 17335593\n",
       "TokenId not found for block 17393193\n",
-      "TokenId not found for block 17285193\n",
       "TokenId not found for block 17342793\n",
-      "TokenId not found for block 17292393\n",
+      "TokenId not found for block 17285193\n",
       "TokenId not found for block 17349993\n",
-      "TokenId not found for block 17299593\n",
+      "TokenId not found for block 17292393\n",
       "TokenId not found for block 17357193\n",
-      "TokenId not found for block 17306793\n",
+      "TokenId not found for block 17299593\n",
       "TokenId not found for block 17364393\n",
+      "TokenId not found for block 17306793\n",
       "TokenId not found for block 17313993\n",
       "TokenId not found for block 17321193\n",
       "TokenId not found for block 17328393\n",
@@ -1026,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1423,6 +1428,11 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/626433064.py:40: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
       "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/626433064.py:38: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -1489,6 +1499,11 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
       "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/626433064.py:38: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/626433064.py:40: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
