--- a/notebooks/Theoretical_LVR.ipynb
+++ b/notebooks/Theoretical_LVR.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +196,8 @@
     "\n",
     "    return P, Pa, Pb, L, pool_value\n",
     "\n",
-    "def calculate_ratio(sigma_squared, P, Pb, Pa):\n",
-    "    numerator = sigma_squared * math.sqrt(P)\n",
+    "def calculate_ratio(sigma, P, Pb, Pa):\n",
+    "    numerator = (sigma ** 2) * math.sqrt(P)\n",
     "    denominator = 4 * (2 * math.sqrt(P) - P / math.sqrt(Pb) - math.sqrt(Pa))\n",
     "    ratio = numerator / denominator\n",
     "    return ratio"
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some helper functions"
+    "### Some helper functions to get Timestamps, token Prices, etc."
    ]
   },
   {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -965,21 +965,21 @@
       "TokenId not found for block 17400393TokenId not found for block 17342793\n",
       "TokenId not found for block 17285193\n",
       "\n",
+      "TokenId not found for block 17407593\n",
       "TokenId not found for block 17292393\n",
       "TokenId not found for block 17349993\n",
-      "TokenId not found for block 17407593\n",
       "TokenId not found for block 17357193\n",
       "TokenId not found for block 17299593\n",
       "TokenId not found for block 17414793\n",
-      "TokenId not found for block 17364393\n",
+      "TokenId not found for block 17364393TokenId not found for block 17421993\n",
       "TokenId not found for block 17306793\n",
-      "TokenId not found for block 17421993\n",
+      "\n",
       "TokenId not found for block 17371593\n",
       "TokenId not found for block 17313993\n",
-      "TokenId not found for block 17378793\n",
-      "TokenId not found for block 17321193\n",
-      "TokenId not found for block 17328393\n",
-      "TokenId not found for block 17385993\n",
+      "TokenId not found for block 17378793TokenId not found for block 17321193\n",
+      "\n",
+      "TokenId not found for block 17385993TokenId not found for block 17328393\n",
+      "\n",
       "TokenId not found for block 17335593\n",
       "TokenId not found for block 17393193\n",
       "TokenId not found for block 17342793\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
