LVR Normalised across Vaults

--- a/notebooks/LVR_Comparison_USDCETH.ipynb
+++ b/notebooks/LVR_Comparison_USDCETH.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,65 +119,65 @@
           "2023-07-16T00:00:00"
          ],
          "y": [
-          50.58961642558274,
-          52.72904802624992,
-          55.255457835009594,
-          57.26549837543537,
-          60.49988661997552,
-          63.60521023623494,
-          71.71017077382551,
-          75.7761296961523,
-          78.43293112279673,
-          80.01465540030496,
-          98.04762412197456,
-          101.79682884481808,
-          104.71668516712198,
-          106.77095802685275,
-          109.91560223862703,
-          114.73929653818392,
-          116.17906292707282,
-          118.69048241775931,
-          142.09924218672717,
-          158.42839355005478,
-          176.30809574507197,
-          179.7015307998447,
-          182.12645800010398,
-          202.5194951156144,
-          204.92459050415792,
-          210.51772285162718,
-          316.87450908945095,
-          323.66976622150185,
-          323.66976622150185,
-          323.66976622150185,
-          325.65045176466447,
-          330.47063923286163,
-          337.61176146086564,
-          345.5678061097916,
-          356.69732793093874,
-          369.1228398235148,
-          373.0375894517695,
-          375.2915615566214,
-          389.6864660733158,
-          399.96267193661055,
-          402.75797671160166,
-          405.31388819881,
-          438.1035239502951,
-          438.5834719782881,
-          442.77534275613993,
-          444.2821887994311,
-          446.42230896884024,
-          448.70456251176796,
-          455.9765971175665,
-          457.56892369368256,
-          459.3938748797173,
-          460.5441641011,
-          465.92200992081547,
-          466.65074672466835,
-          468.97487534626885,
-          489.66179930956804,
-          508.4726632205376,
-          509.07583041006166,
-          510.3859307951844
+          9.241609949392588,
+          9.575368982796963,
+          10.046318256646007,
+          10.40926587553427,
+          9.22765413816885,
+          9.904005641473479,
+          11.260267250318881,
+          11.894128444543805,
+          2.2250538926436803,
+          2.5199065265069156,
+          5.863634987097089,
+          6.681233555886025,
+          7.266556145965768,
+          7.519348971721031,
+          8.094878333446472,
+          9.071635101803759,
+          9.392635865047426,
+          9.876452453228952,
+          14.114088898307182,
+          16.91987319419826,
+          20.374754269038394,
+          21.072667441952678,
+          21.471126469260774,
+          24.394338178254763,
+          24.827356590786714,
+          25.74162921738785,
+          44.19727909009243,
+          45.33844450164588,
+          44.86170957699178,
+          45.61375199022204,
+          46.33252914310783,
+          47.40249601347244,
+          48.57139293419891,
+          50.62868995930916,
+          54.23857911070884,
+          56.81600721231976,
+          57.67995350617268,
+          57.9700743122909,
+          60.50213952101908,
+          61.43508312215582,
+          62.71831807752822,
+          61.89452621800566,
+          68.31005897975957,
+          70.33952745820797,
+          70.94051655011367,
+          71.24377070632013,
+          72.51826840041741,
+          72.49349455279341,
+          73.03447144511675,
+          72.04538839235613,
+          72.5624474831656,
+          72.6302447878265,
+          73.60156766493569,
+          74.23795451026464,
+          74.57632543883523,
+          78.23266575677687,
+          86.29566472492972,
+          83.71815648936453,
+          83.98175145842585
          ]
         },
         {
@@ -249,65 +249,65 @@
           "2023-07-16T00:00:00"
          ],
          "y": [
-          1.1131137405794425,
-          1.2316298128393062,
-          1.3715953239623648,
-          1.4829536919704773,
-          1.6621453657265381,
-          1.834074189677915,
-          2.2831048325450967,
-          2.508191456640925,
-          2.655379633356193,
-          2.743011915070007,
-          3.741697188104881,
-          3.9485891648498015,
-          4.109510536175586,
-          4.223192235482405,
-          4.397234377813379,
-          4.663748669129049,
-          4.7431887842965486,
-          4.881729109519347,
-          6.1768247914309224,
-          7.08146053294003,
-          8.071816757452025,
-          8.259699947305357,
-          8.393992654062227,
-          9.518239117496833,
-          9.650936935858159,
-          9.959293084242596,
-          15.822991725389432,
-          16.197505123340225,
-          16.774782800459246,
-          16.930170944513918,
-          17.13644467273511,
-          17.63823688798155,
-          18.381716942822738,
-          19.208532735574224,
-          20.35623545214974,
-          21.635523806005526,
-          22.038230559955696,
-          22.2702603350185,
-          23.750104161141405,
-          24.811892784473287,
-          25.099563314519948,
-          25.364226374211025,
-          28.754023865136002,
-          28.803159544553676,
-          29.232743227033325,
-          29.38714436127194,
-          29.605362689190894,
-          29.838663889179525,
-          30.585279459496864,
-          30.749709297641868,
-          30.93799974508821,
-          31.05675054613393,
-          31.61197940755005,
-          31.687049480759338,
-          31.926556028114227,
-          34.06019629444503,
-          35.959004849421774,
-          36.020715757340135,
-          36.154738909753924
+          0.20334139190157138,
+          0.22359784348809117,
+          0.24928787742799938,
+          0.26945431579098833,
+          0.2562074120102447,
+          0.29089212893736865,
+          0.3690614863164944,
+          0.4062408317802071,
+          0.08622411401918113,
+          0.10245827266462149,
+          0.28740791096134494,
+          0.33188286870621003,
+          0.36399810705636787,
+          0.3786712794886514,
+          0.4105705536057626,
+          0.46424285289726547,
+          0.48176635653703037,
+          0.508435240126821,
+          0.7433833089151379,
+          0.8993226854304214,
+          1.0903362179575986,
+          1.1288516513533546,
+          1.1510093126181489,
+          1.3131103062491785,
+          1.3369827092799142,
+          1.3874598774091504,
+          2.404989050378778,
+          2.467910827110656,
+          2.5364108130798826,
+          2.605239657154034,
+          2.6623371545817336,
+          2.762987577822592,
+          2.8879023215006203,
+          3.0732805434572645,
+          3.380967138766299,
+          3.6367713617661357,
+          3.7211234180430264,
+          3.7561990317185607,
+          4.024135968510569,
+          4.156339518072262,
+          4.2617773738018805,
+          4.222458567356788,
+          4.8734648566481935,
+          5.021128190747978,
+          5.089076924176536,
+          5.119736663429146,
+          5.223929958884502,
+          5.235513918485409,
+          5.316837108572843,
+          5.253840430174384,
+          5.301865436444228,
+          5.313285154277952,
+          5.4144695027927705,
+          5.465323609503509,
+          5.5030883405860305,
+          5.88654524525563,
+          6.590662637687937,
+          6.396836001072918,
+          6.4235414410813645
          ]
         },
         {
@@ -391,53 +391,53 @@
           null,
           null,
           null,
-          0.0128814318142041,
-          0.0221018720628404,
-          0.0362264697044862,
-          0.0577070339349829,
-          0.0640842033806167,
-          0.0751996122981957,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.1801156375793621,
-          0.2525265137934653,
-          0.3934060772987958,
-          0.4376715452653373,
-          0.463215785403022,
-          0.6256605664952276,
-          0.7436040846534006,
-          0.7752532575982762,
-          0.7752532575982762,
-          1.0446841900148724,
-          1.0446841900148724,
-          1.102110383018852,
-          1.1227453685105029,
-          1.1227453685105029,
-          1.1227453685105029,
-          1.1227453685105029,
-          1.1445951238572998,
-          1.169561789791162,
-          1.18533058475237,
-          1.259073592299074,
-          1.2689908658554443,
-          1.3006582343344335,
-          1.583331235400478,
-          1.583331235400478,
-          1.583331235400478,
-          1.583331235400478
+          2.307268249296199,
+          3.849342522961614,
+          6.262123680518027,
+          10.066165537586453,
+          11.254459715789306,
+          13.238391220373886,
+          31.098998792381867,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          55.98501780477221,
+          50.07915936285873,
+          55.94227339115378,
+          59.097205035199345,
+          80.3193609478049,
+          94.029657568951,
+          98.95948671847736,
+          null,
+          183.97440023332783,
+          110.26632130443136,
+          116.05473524171329,
+          118.33982188341008,
+          null,
+          null,
+          null,
+          120.61916280661858,
+          123.45256589008156,
+          124.95497337593119,
+          132.6484324245893,
+          134.38352057136848,
+          137.61193257524528,
+          167.11988178565477,
+          null,
+          null,
+          null
          ]
         },
         {
@@ -529,50 +529,50 @@
           null,
           null,
           null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
+          null,
           0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0,
-          0.1948448875674199,
-          0.8170143594322238,
-          6.370696911140812,
-          6.370696911140812,
-          6.370696911140812,
-          6.370696911140812
+          2.3628041968082547,
+          9.892153898585923,
+          76.810644095054,
+          null,
+          null,
+          null
          ]
         },
         {
          "line": {
-          "color": "blue"
+          "color": "black"
          },
          "mode": "lines",
          "name": "Log Return",
@@ -1929,7 +1929,7 @@
          }
         },
         "title": {
-         "text": "Cumulative LVR bps for USDCETH"
+         "text": "Cumulative LVR for USDCETH (Normalised)"
         },
         "xaxis": {
          "anchor": "y",
@@ -1966,7 +1966,7 @@
           1
          ],
          "title": {
-          "text": "Cumulative LVR Bps"
+          "text": "Cumulative LVR"
          }
         },
         "yaxis2": {
@@ -2010,40 +2010,37 @@
     "combined_df['cumulative_LVR_366096'] = combined_df['daily_LVR_ratio_515539'].cumsum()\n",
     "combined_df['cumulative_LVR_453456'] = combined_df['daily_LVR_ratio_520645'].cumsum()\n",
     "\n",
+    "combined_df['daily_LVR_USD'] = combined_df['daily_LVR'] * combined_df['token1_usd']\n",
+    "combined_df['daily_LVR_USD_515539'] = combined_df['daily_LVR_515539'] * combined_df['token1_usd']\n",
+    "combined_df['daily_LVR_USD_520645'] = combined_df['daily_LVR_520645'] * combined_df['token1_usd']\n",
+    "\n",
+    "combined_df['cumulative_LVR_USD'] = combined_df['daily_LVR_USD'].cumsum()\n",
+    "combined_df['cumulative_LVR_USD_515539'] = combined_df['daily_LVR_USD_515539'].cumsum()\n",
+    "combined_df['cumulative_LVR_USD_520645'] = combined_df['daily_LVR_USD_520645'].cumsum()\n",
+    "\n",
+    "\n",
     "# Create interactive figure with subplots\n",
     "fig = sp.make_subplots(rows=3, cols=1, shared_xaxes=True, vertical_spacing=0.1)\n",
     "\n",
     "# Add traces for cumulative LVR\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio'],\n",
-    "                         mode='lines', name='Range USDC/ETH Active Strategy', line=dict(color='red', width=3)))\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_ratio_full'],\n",
-    "                         mode='lines', name='Full Range / V2 Reference Position', line=dict(color='purple')))\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_515539'],\n",
-    "                         mode='lines', name='cumulative_LVR_515539', line=dict(color='orange')))\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_520645'],\n",
-    "                         mode='lines', name='cumulative_LVR_520645', line=dict(color='blue')))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_USD']/combined_df['pool_value'],mode='lines', name='Range USDC/ETH Active Strategy', line=dict(color='red', width=3)))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_full_USD']/combined_df['pool_value'],mode='lines', name='Full Range / V2 Reference Position', line=dict(color='purple')))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_USD_515539']/combined_df['pool_value_515539'],mode='lines', name='cumulative_LVR_515539', line=dict(color='orange')))\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['cumulative_LVR_USD_520645']/combined_df['pool_value_520645'],mode='lines', name='cumulative_LVR_520645', line=dict(color='blue')))\n",
     "\n",
     "# Add trace for log return on a separate y-axis\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['log_return'],\n",
-    "                         mode='lines', name='Log Return', line=dict(color='blue')),\n",
-    "              row=2, col=1)\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=combined_df['log_return'],mode='lines', name='Log Return', line=dict(color='black')),row=2, col=1)\n",
     "\n",
     "# Add traces for current price, upper price, and lower price on a separate y-axis\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['current_price'],\n",
-    "                         mode='lines', name='Current Price', line=dict(color='black')),\n",
-    "              row=3, col=1)\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['upper_price'],\n",
-    "                         mode='lines', name='Range Vault Upper Price', line=dict(color='red')),\n",
-    "              row=3, col=1)\n",
-    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['lower_price'],\n",
-    "                         mode='lines', name='Range Vault Lower Price', line=dict(color='red')),\n",
-    "              row=3, col=1)\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['current_price'],mode='lines', name='Current Price', line=dict(color='black')),row=3, col=1)\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['upper_price'],mode='lines', name='Range Vault Upper Price', line=dict(color='red')),row=3, col=1)\n",
+    "fig.add_trace(go.Scatter(x=combined_df['date'], y=1/combined_df['lower_price'],mode='lines', name='Range Vault Lower Price', line=dict(color='red')),row=3, col=1)\n",
     "\n",
     "# Set layout options\n",
     "fig.update_layout(\n",
-    "    title='Cumulative LVR bps for USDCETH',\n",
+    "    title='Cumulative LVR for USDCETH (Normalised)',\n",
     "    xaxis=dict(title='Date'),\n",
-    "    yaxis=dict(title='Cumulative LVR Bps'),\n",
+    "    yaxis=dict(title='Cumulative LVR'),\n",
     "    yaxis2=dict(title='Volatility %'),\n",
     "    yaxis3=dict(title='Price'),\n",
     "    legend=dict(x=1.1, y=1),\n",
