--- a/notebooks/Theoretical_LVR.ipynb
+++ b/notebooks/Theoretical_LVR.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,33 +607,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TokenId not found for block 17285193TokenId not found for block 17342793\n",
-      "\n",
-      "TokenId not found for block 17400393\n",
-      "TokenId not found for block 17349993\n",
-      "TokenId not found for block 17407593\n",
-      "TokenId not found for block 17292393\n",
-      "TokenId not found for block 17357193\n",
+      "1684397831000\n",
+      "1690275327000\n",
       "TokenId not found for block 17414793\n",
+      "TokenId not found for block 17285193\n",
+      "TokenId not found for block 17349993\n",
+      "TokenId not found for block 17292393\n",
+      "TokenId not found for block 17421993\n",
+      "TokenId not found for block 17357193\n",
       "TokenId not found for block 17299593\n",
       "TokenId not found for block 17364393\n",
-      "TokenId not found for block 17306793\n",
-      "TokenId not found for block 17421993\n",
-      "TokenId not found for block 17313993\n",
       "TokenId not found for block 17371593\n",
-      "TokenId not found for block 17378793\n",
+      "TokenId not found for block 17306793\n",
+      "TokenId not found for block 17313993TokenId not found for block 17378793\n",
+      "\n",
       "TokenId not found for block 17321193\n",
       "TokenId not found for block 17385993\n",
       "TokenId not found for block 17328393\n",
-      "TokenId not found for block 17393193TokenId not found for block 17335593\n",
-      "\n",
+      "TokenId not found for block 17393193\n",
+      "TokenId not found for block 17335593\n",
+      "TokenId not found for block 17400393\n",
+      "TokenId not found for block 17407593\n",
       "TokenId not found for block 17342793\n",
       "TokenId not found for block 17285193\n",
       "TokenId not found for block 17349993\n",
@@ -645,7 +646,8 @@
       "TokenId not found for block 17313993\n",
       "TokenId not found for block 17321193\n",
       "TokenId not found for block 17328393\n",
-      "TokenId not found for block 17335593\n"
+      "TokenId not found for block 17335593\n",
+      "TokenId not found for block 17342793\n"
      ]
     }
    ],
@@ -654,6 +656,8 @@
     "TOP_USDC_WETH_POSITIONS = [250274, 520645, 515539]\n",
     "start = get_timestamp(17285193)\n",
     "end = get_current_timestamp()\n",
+    "print(start)\n",
+    "print(end)\n",
     "\n",
     "LQTY_WETH = \"0xD1D5A4c0eA98971894772Dcd6D2f1dc71083C44E\"\n",
     "USDC_WETH = \"0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640\"\n",
@@ -683,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1085,6 +1089,51 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
       "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:99: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -1151,6 +1200,51 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
       "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:99: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_df['collected_fees'].iloc[i] += fee_to_add\n",
+      "/var/folders/lv/l4xn1q3s7jxgwb_811k8vqrh0000gn/T/ipykernel_10119/3514106941.py:101: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1288,8 +1382,8 @@
     "end = get_current_timestamp()\n",
     "\n",
     "# get volatility data from csv\n",
-    "lqtyeth_volatility_df = pd.read_csv('lqtyeth_volatility.csv')\n",
-    "ethusdc_volatility_df = pd.read_csv('ethusdc_volatility.csv')\n",
+    "lqtyeth_volatility_df = get_volatility_routed('LQTY','ETH','USDT')\n",
+    "ethusdc_volatility_df = get_volatility('ETHUSDC')\n",
     "\n",
     "lqtyeth_pool = \"0x350D81A7733Ee6b001966e0844A0ebb096FAbF0f\"\n",
     "range_position,token0,token1 = get_range_position_details(lqtyeth_pool, start, end)\n",
